# file-structure-generator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
tests/: test_cli.py  test_tree_functions.py
